--- a/rosflight_utils/CMakeLists.txt
+++ b/rosflight_utils/CMakeLists.txt
@@ -32,6 +32,10 @@ add_library(rosflight_utils
 add_dependencies(${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(rosflight_utils ${catkin_LIBRARIES})
 
+add_executable(viz_mag src/viz_mag.cpp)
+add_dependencies(viz_mag ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(viz_mag ${catkin_LIBRARIES})
+
 #add_executable(joy src/joy.cpp)
 #add_dependencies(joy ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 #target_link_libraries(joy ${catkin_LIBRARIES})
