Added missing eigen_stl_containers dependency to catkin_package

--- a/rosflight/CMakeLists.txt
+++ b/rosflight/CMakeLists.txt
@@ -39,7 +39,7 @@ endif()
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES mavrosflight
-  CATKIN_DEPENDS roscpp geometry_msgs rosflight_msgs sensor_msgs std_msgs tf
+  CATKIN_DEPENDS roscpp eigen_stl_containers geometry_msgs rosflight_msgs sensor_msgs std_msgs tf
   DEPENDS Boost EIGEN3 YAML_CPP tf
 )
 
